# ComputerGraphics

./: .clang-format  .gitignore  CMakeLists.txt
Lab1/: CMakeLists.txt
Lab1/doc/: report.tex
Lab1/src/: main.cpp
Lab2/: CMakeLists.txt
Lab2/doc/: report.tex
Lab2/src/: main.cpp
Lab2/src/utilities3d/: VertexArray.hpp
Lab2/src/utilities3d/camera/: Camera.cpp  Camera.hpp
Lab2/src/utilities3d/shapes/: Cube.cpp  Cube.hpp  Pyramid.cpp  Pyramid.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp
Lab3/doc/: report.tex
Lab4/: CMakeLists.txt
Lab4/doc/: report.tex
Lab4/shaders/: bulb_fragment.glsl  bulb_vertex.glsl  fragment.glsl  vertex.glsl
Lab4/src/: Window3d.hpp  main.cpp
Lab4/src/camera/: Camera.cpp  Camera.hpp
Lab4/src/shader/: Shader.cpp  Shader.hpp
Lab4/src/shapes/: Cube.cpp  Cube.hpp  VertexArray.hpp
Lab4/src/texture/: Texture.cpp  Texture.hpp
Lab5/: CMakeLists.txt
Lab5/doc/: report.tex
Lab5/src/: Scene.cpp  Scene.hpp  camera.h  float3.h  main.cpp  old_main.cpp  ppm.cpp  ppm.h  ray.hpp  scene.cpp  scene.h  sphere.h  world.h
Lab5/src/camera/: Camera.hpp
Lab5/src/shapes/: Plane.hpp  Shape.hpp  Sphere.hpp
Lab6/: CMakeLists.txt
Lab6/doc/: report.tex
Lab6/engine/: CMakeLists.txt
Lab6/engine/include/objects/: ObjectBase.hpp
Lab6/engine/shaders/: obj_fragment.glsl
Lab6/engine/src/engine/: run.cpp
Lab6/src/: main.cpp
